--- a/example.env
+++ b/example.env
@@ -5,7 +5,7 @@ BACKUP_DIR=
 PG_PGROONGA_REINDEX=
 PG_REPACK=
 PG_BACKUP_DIARY=
-PF_BACKUP_WEEKLY=
+PG_BACKUP_WEEKLY=
 PG_BACKUP_MONTHLY=
 MINIO_BACKUP=
 
