バグの修正、.envの機能拡張、README.md、LICENCEの整備

--- a/example.env
+++ b/example.env
@@ -1,33 +1,110 @@
+########################
+
 # BackupDir
-BACKUP_DIR=
+## 現時点では使いません
+BACKUP_DIR=/backup
+
+
+########################
 
 # MODE
-PG_PGROONGA_REINDEX=
-PG_REPACK=
-PG_BACKUP_DIARY=
-PG_BACKUP_WEEKLY=
-PG_BACKUP_MONTHLY=
-MINIO_BACKUP=
+## TrueまたはFalseを書く。先頭は大文字にすること
+
+### Misskeyのデータベースを最適化する
+PG_REPACK=True
+## この項目は、everyday:毎日, everyweek:毎週, everymonth:毎月のいずれかを指定してください。
+## 指定されない場合は、everydayになります。
+### PG_REPACK_FREQUENCY=everyday
+## この項目は、実行の開始時間を示します。24時間法で指定してください。
+## 指定されない場合は、2:00になります
+### PG_REPACK_TIME=02:00
+
+### Misskeyの検索システムにPGroongaを使う場合に使用する
+PG_PGROONGA_REINDEX=True
+## この項目は、everyday:毎日, everyweek:毎週, everymonth:毎月のいずれかを指定してください。
+## 指定されない場合は、everydayになります。
+### PG_PGROONGA_REINDEX_FREQUENCY=everyday 
+## この項目は、実行の開始時間を示します。24時間法で指定してください。
+## 指定されない場合は、03:00になります
+###PG_PGROONGA_REINDEX_TIME=03:00 
+
+### Misskeyのデータベースをバックアップする(毎日)
+PG_BACKUP_DAILY=True
+## この項目は、every:毎日, every_second:隔日, every_third:3日に1回のいずれかを指定してください。
+## 指定されない場合は、everydayになります。
+### PG_BACKUP_DAILY_FREQUENCY=every
+## この項目は、実行の開始時間を示します。24時間法で指定してください。
+## 指定されない場合は、04:00になります
+### PG_BACKUP_DAILY_TIME=04:00 
+
+### Misskeyのデータベースをバックアップする(毎週)
+PG_BACKUP_WEEKLY=True
+## この項目は、every:毎週, every_second:隔週のいずれかを指定してください。
+## 指定されない場合は、everyになります
+### PG_BACKUP_WEEKLY_FREQUENCY=every 
+## この項目は、実行の開始時間を示します。24時間法で指定してください。
+## 指定されない場合は、05:00になります
+### PG_BACKUP_WEEKLY_TIME=05:00
+
+### Misskeyのデータベースをバックアップする(毎月)
+PG_BACKUP_MONTHLY=True
+## この項目は、every:毎月, every_second:隔月のいずれかを指定してください。
+## 指定されない場合は、everyになります。
+### PG_BACKUP_MONTHLY_FREQUENCY=every
+## この項目は、実行の開始時間を示します。24時間法で指定してください。
+## 指定されない場合は、06:00になります
+### PG_BACKUP_MONTHLY_TIME=06:00
+### Misskeyのファイル保存にMinioを使っている場合に、Minioのバックアップを取る
+MINIO_BACKUP=False
+## この項目は、every:毎日, every_second:隔日, every_third:3日に1回のいずれかを指定してください。
+## 指定されない場合は、everydayになります。
+### MINIO_BACKUP_FREQUENCY=everyday 
+## この項目は、実行の開始時間を示します。24時間法で指定してください。
+## 指定されない場合は、07:00になります
+### MINIO_BACKUP_TIME=07:00
+
+########################
+
+# バックアップの世代管理
+## 世代の数を指定します。指定した数を超えると、古いものから削除されます。
+
+### Misskeyのデータベースをバックアップ(毎日)の世代数
+PG_BACKUP_DAILY_GENERATION=7
+### Misskeyのデータベースをバックアップ(毎週)の世代数
+PG_BACKUP_WEEKLY_GENERATION=4
+### Misskeyのデータベースをバックアップ(毎月)の世代数
+PG_BACKUP_MONTHLY_GENERATION=12
+### Minioのバックアップの世代数
+MINIO_BACKUP_GENERATION=12
+
 
 
 # Misskey
-MISSKEY_HOST=
-MISSKEY_NOTICE_USER_ID=
+## サーバのURLです。https:// は抜いて、「example.com」だけを書いてください。
+MISSKEY_HOST=misskey.seitendan.com
+## 通知の送信を実行するユーザのID（一般に、botのIDです）
+MISSKEY_NOTICE_USER_ID=a2bb13ku17
+## 通知の送信を実行するユーザのAPIトークン（一般に、botのトークンです）
 MISSKEY_NOTICE_USER_TOKEN=
-MISSKEY_TEARGET_USER_ID=
+## 通知の送信先のユーザのID(一般に、これを見ているあなたのIDです)
+MISSKEY_TEARGET_USER_ID=9gw9h2omwq
+
+########################
 
 # Postgres
+POSTGRES_USER=misskey
+POSTGRES_PASSWORD=misskey
+POSTGRES_DB=misskey
+POSTGRES_HOST=192.168.0.10
+POSTGRES_PORT=15432
 
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_HOST=
-POSTGRES_PORT=
-
+########################
 
 # Redis
 REDIS_HOST=
 REDIS_PORT=
+
+########################
 
 # Minio
 MINIO_ACCESS_KEY=
@@ -36,3 +113,4 @@ MINIO_HOST=
 MINIO_PORT=
 MINIO_BUCKET=
 
+########################
