--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 data/
 backup/
 python.log
+./scripts/python.log
 
 
 # Python
@@ -53,4 +54,4 @@ docker-compose.override.yml
 .DS_Store
 Thumbs.db
 EOL
-scripts/python.log
+
